# ghostlight

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CUSTOM_RECOGNIZER_INTEGRATION_GUIDE.md  Dockerfile  FOLDER_RENAME_SUMMARY.md  LICENSE  README.md  SECURITY.md  docker_overview.md  output_json.md  pyproject.toml  requirements.txt  test_custom_recognizer_integration.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docker.yml  linting_test.yml
custom_recognizers/: IMPLEMENTATION_SUMMARY.md  custom_credit_card_recognizer.py  custom_crypto_recognizer.py  custom_date_recognizer.py  custom_email_recognizer.py  custom_iban_recognizer.py  custom_ip_recognizer.py  custom_phone_recognizer.py  custom_recognizer_manager.py  custom_url_recognizer.py  data_processor.py  example_usage.py
dspm/: cli.py
dspm/classify/: engine.py  filters.py
dspm/core/: models.py
dspm/reporters/: json_reporter.py  markdown_reporter.py
dspm/risk/: scoring.py
dspm/scanners/: __init__.py  aws_scanner.py  azure_blob_scanner.py  base.py  couchdb_scanner.py  databases.py  ec2_scanner.py  (+11 more)
ghostlight/: __init__.py  cli.py
readmes/: INDEX.md  allowlist.example.yaml  architecture.md  azure.md  confluence.md  couchdb.md  ec2.md  firebase.md  fs.md  gcs.md  gdrive.md  gdrive_workspace.md  git.md  jira.md  mongo.md  mysql.md  postgres.md  rds.md  redis.md  s3.md  slack.md  vm.md
recognizers/: README.md  base_recognizer.py
scan_helper/: redis.md  text.md
scan_setup/: aws.md  azure.md  firebase.md  gcs.md  gdrive_workspace.md  mongo.md  s3.md
tests/: test_snippets.py
(+39 files in other folders)
